Fixed transition for cards on hover, aligned cards in a block, started preliminary work to ensure that the website returns to the top and the about tab is highlighted on reload

--- a/style.css
+++ b/style.css
@@ -72,9 +72,12 @@ nav a.clicked {
 }
 
 .proj-card {
-    width: 30%;
-    transition: 0.3s;
+    width: 25%;
+    transition: transform 0.2s;
+    display: inline-block;
     margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 40px;
     border: 5px solid rgb(39, 38, 38);
     border-radius: 5%; /* Image will cover top of card so won't see this for top*/
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);     /* Shadows */
@@ -83,8 +86,7 @@ nav a.clicked {
 
 /* On mouse-over, increase card size */
 .proj-card:hover {
-    width: 40px;
-    transition: 0.25s;
+    transform: scale(1.1);
 }
 
 .proj-image {
